--- a/.gitignore
+++ b/.gitignore
@@ -23,5 +23,10 @@ dist-ssr
 *.sln
 *.sw?
 
-# Environment variables
+# Environment files
 .env
+.env.local
+.env.production
+
+# Build outputs
+build
